tests/functions/invalid/bad_arg.amu
s32 foo(s32 a){
    return 3 + a;
}

s32 main(){
    return foo();
}